syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

package ru.somarov.mail.presentation.grpc;

option java_multiple_files = true;

service MailService {
  rpc createMail (CreateMailRequest) returns (MailResponse) {}
  rpc getMail (GetMailRequest) returns (MailResponse) {}
}

message CreateMailRequest {
  string email = 1;
  string text = 2;
}

message GetMailRequest {
  string id = 1;
}

message MailResponse {
  MailDto mail = 1;
}

message MailDto {
  string id = 1;
  string text = 2;
}
